--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "node_modules/.bin/webpack-dev-server",
-    "build": "node_modules/.bin/webpack --progress --hide-modules",
-    },
+    "build": "node_modules/.bin/webpack --progress --hide-modules"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dapobelieve/medium-slider.git"
@@ -24,6 +24,13 @@
   },
   "homepage": "https://github.com/dapobelieve/medium-slider#readme",
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "babel-loader": "^8.1.0",
+    "html-webpack-plugin": "^4.5.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.2",
+    "vue-loader": "^15.9.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
