--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Implementation of the medium slider in Vue ",
   "main": "index.js",
   "scripts": {
-    "dev": "node_modules/.bin/webpack-dev-server",
+    "dev": "node_modules/.bin/webpack-dev-server --mode development --progress",
     "build": "node_modules/.bin/webpack --progress --hide-modules"
   },
   "repository": {
@@ -27,12 +27,18 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "babel-loader": "^8.1.0",
+    "css-loader": "^4.3.0",
     "html-webpack-plugin": "^4.5.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
+    "style-loader": "^1.2.1",
     "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "vue": "^2.6.12"
   }
 }
